[feat] finished LLVM IR generating (without if and for-loop)